[tool.poetry]
name = "shiny-streamlit"
version = "0.1.0"
description = ""
authors = ["ozieblo <59211762+ozieblo-michal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.20.0"
shiny = "^0.8.1"
shinywidgets = "^0.3.1"
pandas = "^2.2.1"
plotnine = "^0.13.2"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
